[FIX] Improving filter visibility

--- a/src/app/components/layout/filter/filter.component.scss
+++ b/src/app/components/layout/filter/filter.component.scss
@@ -3,3 +3,7 @@
     margin: 0;
     padding: 0;
 }
+
+.list li {
+    font-size: 1.1rem !important;
+}
